- Added load video block - Fix popover visibility problem - It's a bit more easier add a block inside IF-BLOCK (not perfect)

--- a/css/block/block-area.css
+++ b/css/block/block-area.css
@@ -486,6 +486,10 @@ Icons for building locks
 	background-position: -80px -40px;
 }
 
+.icon1-load-video {
+	background-position: -160px -40px;
+}
+
 .icon-remove-block {
 	float: right;
 }
