--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
 	width: 320px;
 }
 
-#outputDiv #inputVideo {
+#outputDiv video {
 	display: none;
 }
 
